logo, địa chỉ người dùng